# calibration

calib_data/: manifest.xml
calib_data/camera/: bluefox_29900145.yaml  ins_khex_bottom_cam.ini  ins_khex_bottom_cam.yaml  ins_khex_left_cam.ini  ins_khex_left_cam.yaml  ins_khex_right_cam.ini  ins_khex_right_cam.yaml  ins_khex_right_cam_mask.png.backup01  ins_khex_top_cam.ini  ins_khex_top_cam.yaml  inspot_top_left_cam.yaml
calib_data/lidar/: glen_ins_khex_bottom_lidar.yaml  glen_ins_khex_top_lidar.yaml  glen_ins_khex_top_lidar02.yaml  ins_khex_bottom_lidar.yaml  ins_khex_top_lidar.yaml  roof_ins_khex_bottom_lidar.yaml  roof_ins_khex_top_lidar.yaml
calib_params/: CMakeLists.txt  Makefile  TODO  manifest.xml  package.xml
calib_params/include/: calib_params.hh  camera_calib_params.hh  lidar_calib_params.hh  rgbd_calib_params.hh
calib_params/msg/: CameraCalibMsg.msg  LidarCalibMsg.msg
calib_params/src/: camera_calib_params.cc  lidar_calib_params.cc
