<?xml version="1.0"?>
<package>
  <name>calib_params</name>
  <version>0.0.0</version>
  <description>Calibration parameters for different sensors</description>

  <maintainer email="ozaslan@todo.todo">ozaslan</maintainer>

  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>roscpp</build_depend>
  <build_depend>rospy</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>cv_bridge</build_depend>

  <run_depend>roscpp</run_depend>
  <run_depend>rospy</run_depend>
  <run_depend>std_msgs</run_depend>
  <run_depend>cv_bridge</run_depend>

  <build_depend>message_generation</build_depend>
  <run_depend>message_generation</run_depend>
  <run_depend>message_runtime</run_depend>

   <build_depend>cmake_modules</build_depend>
   <run_depend>cmake_modules</run_depend>

	<export>
        <cpp cflags="-I${prefix}/include " lflags="-L${prefix}/lib -lcalib_params"/> 
	</export>
</package>
